--- a/contacts.html
+++ b/contacts.html
@@ -155,52 +155,59 @@
  <footer class="footer">
   <div class="footer__container">
     <div class="link__container">
-      <svg width="197" height="59">
-        <use href="./images/symbol-defs.svg#icon-logo"></use>
+      <svg class="footer__logo">
+        <use class="footer__logo" href="./images/symbol-defs.svg#icon-logo"></use>
       </svg>
       <ul class="item__container">
-        <li class="list footer__list"><a class="link footer__link text white" href="./about.html">Про нас</a></li>
-          <li class="list footer__list"><a class="link footer__link text white" href="./products.html">Продукція</a></li>
-          <li class="list footer__list"><a class="link footer__link text white" href="./partner.html">Партнерам</a></li>
-          <li class="list footer__list"><a class="link footer__link text white" href="./contacts.html">Контакти</a></li>
+        <li class="list footer__list"><a class="link footer__link text white link__white" href="./about.html">Про нас</a></li>
+        <li class="list footer__list"><a class="link footer__link text white link__white" href="./products.html">Продукція</a></li>
+        <li class="list footer__list"><a class="link footer__link text white link__white" href="./partner.html">Партнерам</a></li>
+        <li class="list footer__list"><a class="link footer__link text white link__white" href="./contacts.html">Контакти</a></li>
       </ul>
     </div>
 
     <div class="footer__information-container">
-      <ul class="footer__information-item">
-        <li class="list footer__information-list"> 
-          <svg class="footer__icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-location"></use>
-          </svg>
-          <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
-        </li>
-        <li class="list footer__information-list">
-          <svg class="footer__icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-mail"></use>
-          </svg>
-          <a class="link text white" href="mailto:office.apero@gmail.com">office.apero@gmail.com</a>
-        </li>
-      </ul>
+      <div class="footer__item__container">
+        <ul class="footer__information-item">
+          <li class="list footer__information-list"> 
+            <svg class="footer__icon" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-location"></use>
+            </svg>
+            <a class="link text white footer__link link__white footer__link-second" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">
+              Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
+          </li>
+          <li class="list footer__information-list">
+            <svg class="footer__icon" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-mail"></use>
+            </svg>
+            <a class="link text white footer__link link__white footer__link-four" href="mailto:office.apero@gmail.com">
+              office.apero@gmail.com</a>
+          </li>
+        </ul>
 
-      <ul class="footer__information-item">
-        <li class="list footer__information-list">
-          <svg class="footer__icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-phone"></use>
-          </svg>
-          <a class="link text white" href="tel:+380667472803">+38 (066) 74 72 803</a>
-        </li>
-        <li class="list footer__information-list">
-          <svg class="footer__icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-phone"></use>
-          </svg>
-          <a class="link text white" href="tel:+380960897897">+38 (096) 08 97 987</a>
-        </li>
-      </ul>
+        <ul class="footer__information-item">
+          <li class="list footer__information-list">
+            <svg class="footer__icon" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-phone"></use>
+            </svg>
+            <a class="link text white footer__link link__white footer__link-third" href="tel:+380667472803">
+              +38 (066) 74 72 803</a>
+          </li>
+          <li class="list footer__information-list">
+            <svg class="footer__icon" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-phone"></use>
+            </svg>
+            <a class="link text white footer__link link__white footer__link-third" href="tel:+380960897897">
+              +38 (096) 08 97 987</a>
+          </li>
+        </ul>
+
+      </div>
 
       <div class="footer__information-item">
         <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
         <p class="text white">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</p>
-        <button class="button__secondary footer__button modal-open">Заповнити заявку</button>
+        <button class="button__primary footer__button modal-open">Заповнити заявку</button>
       </div>
     </div>
 
