--- a/index.html
+++ b/index.html
@@ -539,34 +539,34 @@
         <div class="footer__item__container">
           <ul class="footer__information-item">
             <li class="list footer__information-list"> 
-              <a class="link text white footer__link link__white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">
-                <svg class="footer__icon" width="48" height="48">
-                  <use href="./images/symbol-defs.svg#icon-location"></use>
-                </svg>
+              <svg class="footer__icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-location"></use>
+              </svg>
+              <a class="link text white footer__link link__white footer__link-second" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">
                 Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
             </li>
             <li class="list footer__information-list">
-              <a class="link text white footer__link link__white" href="mailto:office.apero@gmail.com">
-                <svg class="footer__icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-mail"></use>
-                </svg>
+              <svg class="footer__icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-mail"></use>
+              </svg>
+              <a class="link text white footer__link link__white footer__link-four" href="mailto:office.apero@gmail.com">
                 office.apero@gmail.com</a>
             </li>
           </ul>
   
           <ul class="footer__information-item">
             <li class="list footer__information-list">
-              <a class="link text white footer__link link__white" href="tel:+380667472803">
-                <svg class="footer__icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-phone"></use>
-                </svg>
+              <svg class="footer__icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+              <a class="link text white footer__link link__white footer__link-third" href="tel:+380667472803">
                 +38 (066) 74 72 803</a>
             </li>
             <li class="list footer__information-list">
-              <a class="link text white footer__link link__white" href="tel:+380960897897">
-                <svg class="footer__icon" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-phone"></use>
-                </svg>
+              <svg class="footer__icon" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-phone"></use>
+              </svg>
+              <a class="link text white footer__link link__white footer__link-third" href="tel:+380960897897">
                 +38 (096) 08 97 987</a>
             </li>
           </ul>
