--- a/about.html
+++ b/about.html
@@ -339,16 +339,16 @@
           <button class="button__secondary question__button " type="submit">Відправити заявку</button>
         </form>
         <picture>
-          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/qustion-corn-desk-1x_pa5mli.png 1x,
-          https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292477/apero/questions/qustion-corn-desk-2x_bshxqo.png 2x"
-          media="(min-width: 1359px)" />
-          <img class="question_image-popcorn" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/qustion-corn-desk-1x_pa5mli.png" alt="corn ready">
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813460/apero/questions/qustion-corn-desk-1x-min_jpewmy.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813460/apero/questions/qustion-corn-desk-2x-min_zszvep.png 2x"
+          media="(min-width: 1360px)" />
+          <img class="question_image-popcorn" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813460/apero/questions/qustion-corn-desk-1x-min_jpewmy.png" alt="corn ready">
         </picture>
         <picture>
-          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/question-puds-desk-1x_mx36ne.png 1x,
-          https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/question-puds-desk-2x_fuepul.png 2x"
-          media="(min-width: 1359px)" />
-          <img class="question_image-milk" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732292476/apero/questions/question-puds-desk-1x_mx36ne.png" alt="milk puds">
+          <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813194/apero/collection/collection-desktop/Visualization_Milk_6-min_cwlvuw.png 1x,
+          https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813194/apero/collection/collection-desktop/Visualization_Milk_6_2x-min_woeblh.png 2x"
+          media="(min-width: 1360px)" />
+          <img class="question_image-milk" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1734813194/apero/collection/collection-desktop/Visualization_Milk_6-min_cwlvuw.png" alt="milk puds">
         </picture>
       </div>
     </section>
@@ -357,58 +357,85 @@
  <footer class="footer">
   <div class="footer__container">
     <div class="link__container">
-      <svg width="197" height="59">
-        <use href="./images/symbol-defs.svg#icon-logo"></use>
+      <svg class="footer__logo">
+        <use class="footer__logo" href="./images/symbol-defs.svg#icon-logo"></use>
       </svg>
       <ul class="item__container">
-        <li class="list footer__list"><a class="link footer__link text white" href="./about.html">Про нас</a></li>
-        <li class="list footer__list"><a class="link footer__link text white" href="./products.html">Продукція</a></li>
-        <li class="list footer__list"><a class="link footer__link text white" href="./partner.html">Партнерам</a></li>
-        <li class="list footer__list"><a class="link footer__link text white" href="./contacts.html">Контакти</a></li>
+        <li class="list footer__list"><a class="link footer__link text white link__white" href="./about.html">Про нас</a></li>
+        <li class="list footer__list"><a class="link footer__link text white link__white" href="./products.html">Продукція</a></li>
+        <li class="list footer__list"><a class="link footer__link text white link__white" href="./partner.html">Партнерам</a></li>
+        <li class="list footer__list"><a class="link footer__link text white link__white" href="./contacts.html">Контакти</a></li>
       </ul>
     </div>
 
-    <div class="footer__information-container">
-      <ul class="footer__information-item">
-        <li class="list footer__information-list"> 
-          <svg class="footer__icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-location"></use>
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="link__container">
+          <svg class="footer__logo">
+            <use class="footer__logo" href="./images/symbol-defs.svg#icon-logo"></use>
           </svg>
-          <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
-        </li>
-        <li class="list footer__information-list">
-          <svg class="footer__icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-mail"></use>
-          </svg>
-          <a class="link text white" href="mailto:office.apero@gmail.com">office.apero@gmail.com</a>
-        </li>
-      </ul>
-
-      <ul class="footer__information-item">
-        <li class="list footer__information-list">
-          <svg class="footer__icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-phone"></use>
-          </svg>
-          <a class="link text white" href="tel:+380667472803">+38 (066) 74 72 803</a>
-        </li>
-        <li class="list footer__information-list">
-          <svg class="footer__icon" width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-phone"></use>
-          </svg>
-          <a class="link text white" href="tel:+380960897897">+38 (096) 08 97 987</a>
-        </li>
-      </ul>
-
-      <div class="footer__information-item">
-        <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
-        <p class="text white">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</p>
-        <button class="button__primary footer__button modal-open">Заповнити заявку</button>
+          <ul class="item__container">
+            <li class="list footer__list"><a class="link footer__link text white link__white" href="./about.html">Про нас</a></li>
+            <li class="list footer__list"><a class="link footer__link text white link__white" href="./products.html">Продукція</a></li>
+            <li class="list footer__list"><a class="link footer__link text white link__white" href="./partner.html">Партнерам</a></li>
+            <li class="list footer__list"><a class="link footer__link text white link__white" href="./contacts.html">Контакти</a></li>
+          </ul>
+        </div>
+  
+        <div class="footer__information-container">
+          <div class="footer__item__container">
+            <ul class="footer__information-item">
+              <li class="list footer__information-list"> 
+                <svg class="footer__icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-location"></use>
+                </svg>
+                <a class="link text white footer__link link__white footer__link-second" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">
+                  Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
+              </li>
+              <li class="list footer__information-list">
+                <svg class="footer__icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-mail"></use>
+                </svg>
+                <a class="link text white footer__link link__white footer__link-four" href="mailto:office.apero@gmail.com">
+                  office.apero@gmail.com</a>
+              </li>
+            </ul>
+    
+            <ul class="footer__information-item">
+              <li class="list footer__information-list">
+                <svg class="footer__icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-phone"></use>
+                </svg>
+                <a class="link text white footer__link link__white footer__link-third" href="tel:+380667472803">
+                  +38 (066) 74 72 803</a>
+              </li>
+              <li class="list footer__information-list">
+                <svg class="footer__icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-phone"></use>
+                </svg>
+                <a class="link text white footer__link link__white footer__link-third" href="tel:+380960897897">
+                  +38 (096) 08 97 987</a>
+              </li>
+            </ul>
+  
+          </div>
+  
+          <div class="footer__information-item">
+            <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
+            <p class="text white">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</p>
+            <button class="button__primary footer__button modal-open">Заповнити заявку</button>
+          </div>
+        </div>
+  
+        <!-- <ul class="footer__conditions-item">
+          <li class="list"><a class="link text grey footer__conditions " href="">Політика конфіденційності</a></li>
+          <li class="list"><a class="link text grey footer__conditions" href="">Договір оферти</a></li>
+          <li class="list"><a class="link text grey footer__conditions" href="">Умови надання послуг</a></li>
+        </ul> -->
+  
       </div>
-    </div>
-
-  </div>
-
-</footer>
+  
+    </footer>
 
 <div class="backdrop is-hidden">
   <div class="modal">
