--- a/contacts.html
+++ b/contacts.html
@@ -55,19 +55,19 @@
             <svg class="footer__icon" width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-phone"></use>
             </svg>
-            <a class="link text white" href="tel:+380667472803">+38 (066) 74 72 803</a>
+            <a class="link text white contacts__link-white" href="tel:+380667472803">+38 (066) 74 72 803</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon"  width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-phone"></use>
             </svg>
-            <a class="link text white" href="tel:+380960897897">+38 (096) 08 97 987</a>
+            <a class="link text white contacts__link-white" href="tel:+380960897897">+38 (096) 08 97 987</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon"  width="18" height="18">
               <use href="./images/symbol-defs.svg#icon-mail"></use>
             </svg>
-            <a class="link text white" href="mailto:office.apero@gmail.com">office.apero@gmail.com</a>
+            <a class="link text white contacts__link-white" href="mailto:office.apero@gmail.com">office.apero@gmail.com</a>
           </li>
         </ul>
         <svg class="contacts__icon" >
@@ -81,13 +81,13 @@
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-phone-small-black"></use>
             </svg>
-            <a class="link text" href="tel:+380672108932">+38 (067) 21 08 932 Дмитро</a>
+            <a class="link text contacts__link-black " href="tel:+380672108932">+38 (067) 21 08 932 Дмитро</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-mail-black"></use>
             </svg>
-            <a class="link text" href="mailto:provision.apero@gmail.com">provision.apero@gmail.com</a>
+            <a class="link text contacts__link-black" href="mailto:provision.apero@gmail.com">provision.apero@gmail.com</a>
           </li>
         </ul>
         <svg class="contacts__icon">
@@ -101,13 +101,13 @@
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-phone-small-black"></use>
             </svg>
-            <a class="link text" href="tel:+380507659008">+38 (050) 76 59 008 Віктор</a>
+            <a class="link text contacts__link-black" href="tel:+380507659008">+38 (050) 76 59 008 Віктор</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-mail-black"></use>
             </svg>
-            <a class="link text" href="mailto:sales.apero@gmail.com">sales.apero@gmail.com</a>
+            <a class="link text contacts__link-black" href="mailto:sales.apero@gmail.com">sales.apero@gmail.com</a>
           </li>
         </ul>
         <svg class="contacts__icon" >
@@ -121,13 +121,13 @@
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-phone-small-black"></use>
             </svg>
-            <a class="link text" href="tel:+380968455513">+38 (096) 84 55 513 Андрій</a>
+            <a class="link text contacts__link-black" href="tel:+380968455513">+38 (096) 84 55 513 Андрій</a>
           </li>
           <li class="list contacts__list">
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-mail-black"></use>
             </svg>
-            <a class="link text" href="mailto:export.apero@gmail.com">export.apero@gmail.com</a>
+            <a class="link text contacts__link-black" href="mailto:export.apero@gmail.com">export.apero@gmail.com</a>
           </li>
         </ul>
         <svg class="contacts__icon" >
@@ -141,7 +141,7 @@
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-location"></use>
             </svg>
-            <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
+            <a class="link text white contacts__link-white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, вул. Валерія Красняна, 60к</a>
           </li>
         </ul>
         <svg class="contacts__icon" >
