update header about

--- a/about.html
+++ b/about.html
@@ -19,29 +19,29 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
 </head>
 <body>
-    <header class="header header__second">
-      <a href="./index.html" class="link" aria-label="На головну" 
-        <svg class="logo" width="80" height="24">
-          <use href="./images/symbol-defs.svg#icon-logo-black"></use>
-        </svg>
-      </a>
-      <nav class="navigation">
-       <ul class="nav__list">
-           <li class="list"><a href="./index.html" class="link nav__link  nav__link-second text">Головна</a></li>
-           <li class="list"><a href="./about.html" class="link nav__link  nav__link-second text">Про нас</a></li>
-           <li class="list"><a href="./products.html" class="link nav__link nav__link-second text">Продукція</a></li>
-           <li class="list"><a href="./partner.html" class="link nav__link  nav__link-second text">Партнерам</a></li>
-           <li class="list"><a href="./contacts.html" class="link nav__link nav__link-second  text">Контакти</a></li>
-       </ul>
-      </nav>
-      <button type="button" class="button__mobile__menu" aria-label="Мобільне меню">
-       <svg class="icon__menu__mobile icon__menu__mobile-second"  width="24" height="24">
-         <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
-       </svg>
-     </button>
-      <button type="button" class="button__primary header__button-second modal-open">Отримати пропозицію</button>
+  <header class="header header__second">
+    <a href="./index.html" class="link" aria-label="На головну"> 
+      <svg class="logo" width="80" height="24">
+        <use href="./images/symbol-defs.svg#icon-logo-black"></use>
+      </svg>
+    </a>
+    <nav class="navigation">
+     <ul class="nav__list">
+         <li class="list"><a href="./index.html" class="link nav__link  nav__link-second text">Головна</a></li>
+         <li class="list"><a href="./about.html" class="link nav__link  nav__link-second text">Про нас</a></li>
+         <li class="list"><a href="./products.html" class="link nav__link nav__link-second text">Продукція</a></li>
+         <li class="list"><a href="./partner.html" class="link nav__link  nav__link-second text">Партнерам</a></li>
+         <li class="list"><a href="./contacts.html" class="link nav__link nav__link-second  text">Контакти</a></li>
+     </ul>
+    </nav>
+    <button type="button" class="button__mobile__menu" aria-label="Мобільне меню">
+     <svg class="icon__menu__mobile icon__menu__mobile-second"  width="24" height="24">
+       <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
+     </svg>
+   </button>
+    <button type="button" class="button__primary header__button-second modal-open">Отримати пропозицію</button>
 
- </header>
+</header>
 
  <main>
     <section class="container__orange">
@@ -243,9 +243,7 @@
         media="(max-width: 743px)"/>
        <img class="sticks__image"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-1x-min_evd3wj.png"  alt="production"  />
       </picture>
-      
       </div>
-
     </section>
 
     <section class="container">
@@ -426,15 +424,7 @@
             <button class="button__primary footer__button modal-open">Заповнити заявку</button>
           </div>
         </div>
-  
-        <!-- <ul class="footer__conditions-item">
-          <li class="list"><a class="link text grey footer__conditions " href="">Політика конфіденційності</a></li>
-          <li class="list"><a class="link text grey footer__conditions" href="">Договір оферти</a></li>
-          <li class="list"><a class="link text grey footer__conditions" href="">Умови надання послуг</a></li>
-        </ul> -->
-  
       </div>
-  
     </footer>
 
 <div class="backdrop is-hidden">
