update image about section

--- a/about.html
+++ b/about.html
@@ -241,7 +241,7 @@
         <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-1x-min_evd3wj.png 1x,
         https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-2x-min_gkxsew.png 2x" 
         media="(max-width: 743px)"/>
-       <img class="sticks__image"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-1x-min_evd3wj.png"  alt="production"  />
+       <img class="about__production-image"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733002254/apero/about/baget-white-mob-1x-min_evd3wj.png"  alt="production"  />
       </picture>
       </div>
     </section>
@@ -352,20 +352,6 @@
     </section>
  </main>
  
- <footer class="footer">
-  <div class="footer__container">
-    <div class="link__container">
-      <svg class="footer__logo">
-        <use class="footer__logo" href="./images/symbol-defs.svg#icon-logo"></use>
-      </svg>
-      <ul class="item__container">
-        <li class="list footer__list"><a class="link footer__link text white link__white" href="./about.html">Про нас</a></li>
-        <li class="list footer__list"><a class="link footer__link text white link__white" href="./products.html">Продукція</a></li>
-        <li class="list footer__list"><a class="link footer__link text white link__white" href="./partner.html">Партнерам</a></li>
-        <li class="list footer__list"><a class="link footer__link text white link__white" href="./contacts.html">Контакти</a></li>
-      </ul>
-    </div>
-
     <footer class="footer">
       <div class="footer__container">
         <div class="link__container">
