--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
             <h4 class="collection__subtitle">Сухарики в асортименті</h4>
             <p class="text collection__text ">Лінійка суриків з різними  смаками - це гастрономічна насолода з кожним  хрустом. Тільки відбірна сировина, 0% консервантів та натуральні спеції</p>
             <button class="section__link collection__link" onclick="window.location.href='./products.html?filter=syharyky'" >Дізнатися більше</button>
-            <div class="collection-link-underline"></div>
           </div>
 
           <picture>
@@ -265,8 +264,7 @@
             <h4 class="collection__subtitle">Попкорн</h4>
             <p class="text collection__text ">Не залишить байдужим навіть найвибагливіших гурманів. Насолода гарантована, так як для виробництва використовуються найкращі кукурудзяні зерна</p>
             
-            <button class="section__link collection__link" onclick="window.location.href='./products.html?filter=popcorn'" >Дізнатися більше</button><!-- <a href="./products.html" class="section__link collection__link">Дізнатися більше</a> -->
-            <div class="collection-link-underline"></div>
+            <button class="section__link collection__link" onclick="window.location.href='./products.html?filter=popcorn'" >Дізнатися більше</button>
             <picture>
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732222510/apero/collection/collection-desktop/collection-classic-desktop-1x-min_tla60v.png 1x,
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1732222510/apero/collection/collection-desktop/collection-classic-desktop-2x-min_i7q8yu.png 2x" 
@@ -375,7 +373,8 @@
             <div class="statistic__block-third">
               <h2 class="title statistic__title">аперо - це <span class="statistic__title-orange">українська душа</span>  та європейська якість</h2>
               <p class="text statistic__text">Для виробничих процесів використовується сучасне імпортне обладнання. Цілодобовий контроль якості, ефективний моніторинг та менеджмент дозволяють компанії бути на крок попереду конкурентів та реалізовувати великі об’єми харчових продуктів власного виробництва!</p>
-              <a href="./about.html" class="section__link statistic__link">Дізнатися більше</a> 
+              <a href="./about.html" class="link section__link statistic__link">Дізнатися більше</a> 
+              <!-- <button class="section__link collection__link" onclick="window.location.href='./products.html?filter=popcorn'" >Дізнатися більше</button> -->
             </div>
      </section>
 
