--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </a>
               </div>
               <div class="hero__image-container">
-                <div class="hero__image-navy">  </div>
+                <div class="hero__image-navy"></div>
                 <picture>
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193975/apero/hero/hero-desktop/hero-popSalt-desk-1x-min_d7kdow.png 1x,
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193977/apero/hero/hero-desktop/hero-popSalt-desk-2x-min_sxk4w1.png 2x" 
@@ -109,7 +109,7 @@
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194097/apero/hero/hero-mob/hero-popCheese-mob-2x-min_cbydxv.png 2x" 
                   type="image/png"
                   media="(max-width: 743px)"/>
-               <img class="hero__image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194095/apero/hero/hero-mob/hero-popCheese-mob-1x-min_yecute.png" alt="Orange popcorn"  />
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194095/apero/hero/hero-mob/hero-popCheese-mob-1x-min_yecute.png" alt="Orange popcorn"  />
                </picture>
               </div>
             </div>
@@ -170,7 +170,7 @@
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png 1x, 
                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194090/apero/hero/hero-mob/hero-popButter-mob-2x-min_yfs7om.png 2x" 
                   media="(max-width: 743px)" />
-               <img class="hero__image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png"  class="hero-image" alt="Green popcorn"  />
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png"  class="hero-image" alt="Green popcorn"  />
                </picture>
               </div>
             </div>
