--- a/about.html
+++ b/about.html
@@ -324,7 +324,7 @@
 
     <section class="container container__blue">
       <div class="question__container">
-        <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
+        <form name="question-form" class="question__form" action="https://formspree.io/f/mqaagalg" method="POST"> 
          <h2 class="title question__title">маєте запитання чи пропозиції?</h2>
          <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
           <div class="question__form-container">
@@ -422,7 +422,7 @@
          <use href="./images/symbol-defs.svg#icon-close"></use>
        </svg>
       </button>
-     <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
+     <form name="question-form" class="question__form" action="https://formspree.io/f/mqaagalg" method="POST"> 
        <h2 class="title question__title">бажаєте стати партнером або маєте пропозиції?</h2>
        <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
         <div class="question__form-container">
