adding new words to H1

--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
    </header>
 
    <main>
-    <h1>Кукурудзяні палички та снеки</h1>
+    <h1>Кукурудзяні палички та снеки Попкорн
+        Бамбук Трубочки Подушечки Сухарики Білочка Аперо Apero
+        Виробник кукурудзяних паличок Палички з іграшкою 
+        чіпси до пива
+    </h1>
      <section class="hero__section-container">
        <div class="swiper mySwiper">
           <div class="swiper-slide hero__container-navy">
