--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
    </header>
 
    <main>
-    <h1>Кукурудзяні палички та снеки Попкорн
-        Бамбук Трубочки Подушечки Сухарики Білочка Аперо Apero
-        Виробник кукурудзяних паличок Палички з іграшкою 
-        чіпси до пива
+    <h1>Кукурудзяні палички та снеки 
+      Попкорн
+Снеки 
+Кукурудзяні палички 
+Бамбук 
+Трубочки Подушечки
+Сухарики Білочка Аперо Apero Виробник кукурудзяних паличок Палички з іграшкою Виробник попкорну Виробник Виробних бамбука Виробник снеків чіпси Виробник сухариків До пива
     </h1>
      <section class="hero__section-container">
        <div class="swiper mySwiper">
