--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
 </header>
 
  <main>
+  <h1>Snex та Білочка – натуральні снеки та кукурудзяні палички від виробника</h1>
     <section class="container__orange">
       <div class="container">
         <h2 class="about__hero-title">Привіт, ми аперо</h2>
