--- a/contacts.html
+++ b/contacts.html
@@ -44,6 +44,7 @@
  </header>
 
  <main class="container__grey">
+  <h1>Snex та Білочка – натуральні снеки та кукурудзяні палички від виробника</h1>
   <section class="container ">
     <h2 class="title partner__title">Ми на зв'язку</h2>
     <p class="subtitle partner__subtitle">Потрібна консультація? Ми радо допоможемо</p>
