--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apero</title>
+    <meta name="description" content="Snex і Білочка – український виробник кукурудзяних паличок, попкорну, сухариків та снеків з натуральних інгредієнтів. Власне виробництво в Чернівецькій області. Доставка по всій Україні." />
+    <title>Аперо – Виробник кукурудзяних паличок, снеків і попкорну | Доставка по Україні</title>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -50,19 +51,16 @@
    </header>
 
    <main>
-    <h1>Кукурудзяні палички та снеки 
-      Попкорн
-Снеки 
-Кукурудзяні палички 
-Бамбук 
-Трубочки Подушечки
-Сухарики Білочка Аперо Apero Виробник кукурудзяних паличок Палички з іграшкою Виробник попкорну Виробник Виробних бамбука Виробник снеків чіпси Виробник сухариків До пива
-    </h1>
+    <h1>Snex та Білочка – натуральні снеки та кукурудзяні палички від виробника</h1>
      <section class="hero__section-container">
        <div class="swiper mySwiper">
           <div class="swiper-slide hero__container-navy">
             <div class="hero__container">
               <div class="hero__text-container">
+                <div class="visually-hidden">
+                  <h2>Кукурудзяні палички, снеки та попкорн від виробника Snex та Білочка</h2>
+                  <h3>Натуральні інгредієнти, ідеальний смак та доставка по всій Україні</h3>
+                </div>
                 <h2 class="hero__title">отримайте смак</h2>
                 <h3 class="hero__subtitle">солоних пригод</h3>
                 <p class="hero__text subtitle">Попкорн АПЕРО не залишить байдужим навіть найвибагливіших гурманів</p>
