--- a/partner.html
+++ b/partner.html
@@ -46,6 +46,7 @@
     
 
 <main class="container__grey">
+  <h1>Snex та Білочка – натуральні снеки та кукурудзяні палички від виробника</h1>
   <section class="container partner__advantage-container">
     <!-- <div class="container"> -->
       <h2 class="title partner__title">Переваги співпраці з нами</h2>
