--- a/products.html
+++ b/products.html
@@ -43,6 +43,7 @@
  </header>
 
  <main>
+  <h1>Snex та Білочка – натуральні снеки та кукурудзяні палички від виробника</h1>
    <section class="container__orange  product__container">
     <div class=" container product__hero-container">
       <h2 class="product__hero-title" >Ми пропонуємо снеки</h2>
