--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Snex і Білочка – український виробник кукурудзяних паличок, попкорну, сухариків та снеків з натуральних інгредієнтів. Власне виробництво в Чернівецькій області. Доставка по всій Україні." />
+    <meta name="description" content="Apero – український виробник кукурудзяних паличок, попкорну, сухариків та снеків з натуральних інгредієнтів. Власне виробництво в Чернівецькій області. Доставка по всій Україні." />
     <title>Аперо – Виробник кукурудзяних паличок, снеків і попкорну | Доставка по Україні</title>
     <link
     rel="stylesheet"
