--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <body>
    
       <header class="header">
-        <a href="./index.html" class="link" aria-label="На головну"> 
+        <!-- <a href="./index.html" class="link" aria-label="На головну">  -->
+          <a href="./404.html" class="link" aria-label="На головну">
           <svg class="logo" width="80" height="24">
             <use href="./images/symbol-defs.svg#icon-logo"></use>
           </svg>
@@ -52,15 +53,15 @@
 
    <main>
     <h1>Snex та Білочка – натуральні снеки та кукурудзяні палички від виробника</h1>
+    <div class="visually-hidden">
+      <h2>Кукурудзяні палички, снеки та попкорн від виробника Snex та Білочка</h2>
+      <h3>Натуральні інгредієнти, ідеальний смак та доставка по всій Україні</h3>
+    </div>
      <section class="hero__section-container">
        <div class="swiper mySwiper">
           <div class="swiper-slide hero__container-navy">
             <div class="hero__container">
-              <div class="hero__text-container">
-                <div class="visually-hidden">
-                  <h2>Кукурудзяні палички, снеки та попкорн від виробника Snex та Білочка</h2>
-                  <h3>Натуральні інгредієнти, ідеальний смак та доставка по всій Україні</h3>
-                </div>
+              <div class="hero__text-container">            
                 <h2 class="hero__title">отримайте смак</h2>
                 <h3 class="hero__subtitle">солоних пригод</h3>
                 <p class="hero__text subtitle">Попкорн АПЕРО не залишить байдужим навіть найвибагливіших гурманів</p>
