created error page

--- a/404.html
+++ b/404.html
@@ -22,44 +22,26 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
 </head>
 <body>
-    <!-- <header class="header">
-        <a href="./index.html" class="link" aria-label="На головну"> 
-          <svg class="logo" width="80" height="24">
-            <use href="./images/symbol-defs.svg#icon-logo"></use>
-          </svg>
-          <svg class="logo__fixed" width="80" height="24">
-            <use href="./images/symbol-defs.svg#icon-logo-black"></use>
-          </svg>
-        </a>
-        <nav class="navigation">
-         <ul class="nav__list">
-             <li class="list"><a href="./index.html" class="link nav__link text">Головна</a></li>
-             <li class="list"><a href="./about.html" class="link nav__link text">Про нас</a></li>
-             <li class="list"><a href="./products.html" class="link nav__link text">Продукція</a></li>
-             <li class="list"><a href="./partner.html" class="link nav__link text">Партнерам</a></li>
-             <li class="list"><a href="./contacts.html" class="link nav__link text">Контакти</a></li>
-         </ul>
-        </nav>   
-        <button type="button" class="button__mobile__menu" aria-label="Мобільне меню">
-          <svg class="icon__menu__mobile"  width="24" height="24">
-            <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
-          </svg>
-        </button>
-        <button type="button" class="button__primary header__button button__form modal-open">Отримати пропозицію</button>
-   </header>  -->
-
-hello
-
-<!-- 
-   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/slick-carousel/slick/slick.min.js"></script>
-   <script type="module" src="./js/slick.js"></script>
-   <script type="module" src="./js/header-active-page.js"></script>
-   <script type="module" src="./js/fixed-header.js"></script>
-   <script type="module" src="./js/button-form.js"></script>
-   <script type="module" src="./js/form-button-send.js"></script>
-   <script type="module" src="./js/header-menu.js"></script>
-   <script type="module" src="./js/active-page-mob-menu.js"></script>
-   <script type="module" src="./js/filter-main-page.js"></script>  -->
+  <section class=" container error__section ">
+    <h2 class="error__title">404</h2>
+    <picture>
+      <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1746541689/apero/error/error_desktop_1x-min_lz41xt.png 1x,
+      https://res.cloudinary.com/ddtdtthqh/image/upload/v1746541688/apero/error/error_desktop_2x-min_g0fhzf.png 2x" 
+      media="(min-width: 1360px)" />
+      <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1746541689/apero/error/error_tablet_1x-min_xamxnw.png 1x,
+      https://res.cloudinary.com/ddtdtthqh/image/upload/v1746541692/apero/error/error_tablet_2x-min_tm4fwj.png 2x" 
+      media="(min-width: 744px) and (max-width: 1359px)" />
+      <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1746541688/apero/error/error_1x_mobile-min_fgtuc8.png 1x,
+      https://res.cloudinary.com/ddtdtthqh/image/upload/v1746541689/apero/error/error_mobile_2x-min_oyhulr.png 2x" 
+      media="(max-width: 743px)"/>
+     <img class="error__img"  src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1746541688/apero/error/error_1x_mobile-min_fgtuc8.png"  alt="production"  />
+    </picture>
+    <p class="subtitle white">Ай-ай-ай! Цю сторінку вже 'з'їли' наші снеки! <br> Шукайте нові смаки на головній</p>
+    <a href="./index.html" class="link error__link "><span class="error__text">На головну</span> 
+      <svg width="40" height="40" class="hero-svg">
+        <use href="./images/symbol-defs.svg#icon-arrow-up-right"></use>
+      </svg>
+    </a>
+  </section>
 </body>
 </html>
