--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
    </header>
 
    <main>
-    <h1>Snex та Білочка – натуральні снеки та кукурудзяні палички від виробника</h1>
+    <h1>Snex та Білочка – натуральні снеки, кукурудзяні палички та попкорн від виробника</h1>
     <section class="hero__section-container">
       <div class="swiper mySwiper">
         <div class="swiper-slide hero__container-navy">
