added meta description

--- a/partner.html
+++ b/partner.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Apero – український виробник кукурудзяних паличок, попкорну, сухариків та снеків з натуральних інгредієнтів. Власне виробництво в Чернівецькій області. Доставка по всій Україні." />
-    <title>Аперо – Виробник кукурудзяних паличок, снеків і попкорну | Доставка по Україні</title>
+    <meta name="keywords" content="Аперо, кукурудзяні палички, попкорн, сухарики, снеки">
+    <title>Інформація для наших партнерів</title>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
