--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Apero – український виробник кукурудзяних паличок, попкорну, сухариків та снеків з натуральних інгредієнтів. Власне виробництво в Чернівецькій області. Доставка по всій Україні." />
+    <meta name="description" content="провідний вітчизняний виробник високоякісної продукції із кукурудзи вирощеної в Україні" />
+    <meta name="keywords" content="Аперо, кукурудзяні палички, попкорн, сухарики, снеки">
     <title>Аперо – Виробник кукурудзяних паличок, снеків і попкорну | Доставка по Україні</title>
     <link
     rel="stylesheet"
@@ -116,7 +117,6 @@
             </picture>
 
     <section class="container about__production-container">
-      <h2 class="about__title__hidden">Apero</h2>
       <div class="about__production__container-grey">
         <p class="title about__production-title">аперо це також</p>
       </div>
