--- a/contacts.html
+++ b/contacts.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Apero – український виробник кукурудзяних паличок, попкорну, сухариків та снеків з натуральних інгредієнтів. Власне виробництво в Чернівецькій області. Доставка по всій Україні." />
-    <title>Аперо – Виробник кукурудзяних паличок, снеків і попкорну | Доставка по Україні</title>
+    <meta name="description" content="Контакти компанії Аперо" />
+    <title>Контакти компанії Аперо</title>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
