--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Apero – український виробник кукурудзяних паличок, попкорну, сухариків та снеків з натуральних інгредієнтів. Власне виробництво в Чернівецькій області. Доставка по всій Україні." />
+    <meta name="keywords" content="Аперо, кукурудзяні палички, попкорн, сухарики, снеки">
     <title>Аперо – Виробник кукурудзяних паличок, снеків і попкорну | Доставка по Україні</title>
     <link
     rel="stylesheet"
