--- a/products.html
+++ b/products.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="В нашому асортименті кукурудзяні вироби, що не містять шкідливих консервантів, барвників та підсолоджувачів" />
+   <meta name="description" content="Apero - виробник натуральних кукурудзяних паличок, попкорну та снеків з доставкою по Україні" />
     <meta name="keywords" content="Аперо, кукурудзяні палички, попкорн, сухарики, снеки">
-    <title>Асортимент компанії Аперо: кукурудзяні палички, попкорн, сухарики, снеки</title>
+    <meta name="robots" content="index, follow">
+    <title>Аперо - натуральні кукурудзяні палички, снеки і попкорн</title>
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
