--- a/products.html
+++ b/products.html
@@ -133,6 +133,53 @@
       </ul>
      
         <ul class="product__list-container">
+
+          <!-- // new products 03/10// -->
+
+
+          <li class="list product__list bambuc__list">
+            <picture>
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520934/apero/products/new%2003.10/desktop/bamboo_milk_desk_1x-min_yh88a1.png 1x,
+                https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520935/apero/products/new%2003.10/desktop/bamboo_milk_desk_2x-min_zyexl7.png 2x"
+                media="(min-width: 744px)" />
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520990/apero/products/new%2003.10/mobile/bamboo_milk_mob_1x-min_ji1igw.png 1x,
+                https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520992/apero/products/new%2003.10/mobile/bamboo_milk_mob_2x-min_dpq8h6.png 2x"
+                media="(max-width: 743px)" />
+              <img class="image__baget"
+                src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520990/apero/products/new%2003.10/mobile/bamboo_milk_mob_1x-min_ji1igw.png"
+                alt="production" />
+            </picture>
+            <p class="subtitle product__list-subtitle">Трубочки бамбукові тростини зі смаком молока</p>
+            <div class="product__text-container">
+              <p class="text product__list-text">Вага: 200 г</p>
+              <p class="text product__list-text">Фасування:  шт</p>
+            </div>
+          </li>
+
+
+          <li class="list product__list bambuc__list">
+            <picture>
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518632/apero/products/new%2003.10/desktop/bamboo_choc_desk_1x-min_c5o5s8.png 1x,
+                https://res.cloudinary.com/ddtdtthqh/image/upload/v1759518633/apero/products/new%2003.10/desktop/bamboo_choc_desk_2x-min_m7eqyu.png 2x"
+                media="(min-width: 744px)" />
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520988/apero/products/new%2003.10/mobile/bamboo_choc_mob_1x-min_eeso45.png 1x,
+                https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520989/apero/products/new%2003.10/mobile/bamboo_choc_mob_2x-min_olosm0.png 2x"
+                media="(max-width: 743px)" />
+              <img class="image__baget"
+                src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1759520988/apero/products/new%2003.10/mobile/bamboo_choc_mob_1x-min_eeso45.png"
+                alt="production" />
+            </picture>
+            <p class="subtitle product__list-subtitle">Трубочки бамбукові тростини зі смаком шоколаду</p>
+            <div class="product__text-container">
+              <p class="text product__list-text">Вага: 200 г</p>
+              <p class="text product__list-text">Фасування: шт</p>
+            </div>
+          </li>
+
           <li class="list product__list suharyky__list">
             <picture>
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243936/apero/products/suharyky/baget-crab-desktop-1x-min_nn9hao.png 1x,
