--- a/products.html
+++ b/products.html
@@ -180,6 +180,69 @@
             </div>
           </li>
 
+          <li class="list product__list popcorn__list">
+            <picture>
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760210132/apero/products/new%2003.10/desktop/popcorn_sour_desk_1x-min_pe7ruj.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1760210134/apero/products/new%2003.10/desktop/popcorn_sour_desk_2x-min_fn8vxc.png 2x"
+                media="(min-width: 744px)" />
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211040/apero/products/new%2003.10/mobile/popcorn_sour_mob-1x-min_uqzmmt.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211041/apero/products/new%2003.10/mobile/popcorn_sour_mob-2x-min_mobcux.png 2x"
+                media="(max-width: 743px)" />
+              <img class="image__baget"
+                src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211040/apero/products/new%2003.10/mobile/popcorn_sour_mob-1x-min_uqzmmt.png"
+                alt="popcorn" />
+            </picture>
+            <p class="subtitle product__list-subtitle">Готовий попкорн Snex зі смаком зелені та сметани</p>
+            <div class="product__text-container">
+              <p class="text product__list-text">Вага:  г</p>
+              <p class="text product__list-text">Фасування: шт</p>
+            </div>
+          </li>
+
+          <li class="list product__list popcorn__list">
+            <picture>
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760210135/apero/products/new%2003.10/desktop/popcorn_sweet_desk_1x-min_q00s5s.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1760210136/apero/products/new%2003.10/desktop/popcorn_sweet_desk_2x-min_xfyq4r.png 2x"
+                media="(min-width: 744px)" />
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211044/apero/products/new%2003.10/mobile/popcorn_sweet_mob-1x-min_bimwso.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211045/apero/products/new%2003.10/mobile/popcorn_sweet_mob-2x-min_fctrem.png 2x"
+                media="(max-width: 743px)" />
+              <img class="image__baget"
+                src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211044/apero/products/new%2003.10/mobile/popcorn_sweet_mob-1x-min_bimwso.png"
+                alt="popcorn" />
+            </picture>
+            <p class="subtitle product__list-subtitle">Готовий попкорн Snex із солодким смаком</p>
+            <div class="product__text-container">
+              <p class="text product__list-text">Вага: г</p>
+              <p class="text product__list-text">Фасування: шт</p>
+            </div>
+          </li>
+
+          <li class="list product__list popcorn__list">
+            <picture>
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760210131/apero/products/new%2003.10/desktop/popcorn_bacon_desk_1x-min_njuxal.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1760210131/apero/products/new%2003.10/desktop/popcorn_becon_desk_2x-min_usubxm.png 2x"
+                media="(min-width: 744px)" />
+              <source
+                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211038/apero/products/new%2003.10/mobile/popcorn_becon_mob-1x-min_veaurv.png 1x,
+                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211038/apero/products/new%2003.10/mobile/popcorn_becon_mob-2x-min_cbkiwd.png 2x"
+                media="(max-width: 743px)" />
+              <img class="image__baget"
+                src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1760211038/apero/products/new%2003.10/mobile/popcorn_becon_mob-1x-min_veaurv.png"
+                alt="popcorn" />
+            </picture>
+            <p class="subtitle product__list-subtitle">Готовий попкорн Snex зі смаком бекону</p>
+            <div class="product__text-container">
+              <p class="text product__list-text">Вага: г</p>
+              <p class="text product__list-text">Фасування: шт</p>
+            </div>
+          </li>
+
           <li class="list product__list suharyky__list">
             <picture>
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243936/apero/products/suharyky/baget-crab-desktop-1x-min_nn9hao.png 1x,
@@ -446,6 +509,7 @@
                 <p class="text product__list-text">Фасування: 14 шт</p>
               </div>
               </li>
+
               <li class="list product__list corn__list">
                 <picture>
                   <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1733243716/apero/products/corn_sweet/konstruktor-desktop-1x-min_cdsgmq.png 1x,
